<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="clear">C</string>
    <string name="percentage">%</string>
    <string name="delete">DEL</string>
    <string name="modulus">MOD</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="addition">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>