<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main_relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <LinearLayout
        android:id="@+id/io_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp">

        <EditText
            android:id="@+id/et_io"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:textSize="@dimen/_32sdp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/io_linear_layout"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/clear"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_mod"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/modulus"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_percentage"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/percentage"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_below="@id/row_1"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/btn_seven"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/seven"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_eight"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/eight"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_nine"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/nine"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_multiply"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/multiply"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_below="@id/row_2"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_four"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/four"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btn_five"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/five"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_six"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/six"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_divide"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/divide"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_below="@id/row_3"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_one"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_two"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_three"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/three"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_plus"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/addition"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_below="@id/row_4"
        android:weightSum="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_double_zero"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/clear"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btn_decimal"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/decimal"
            android:textSize="@dimen/_32sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/btn_zero"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/zero"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_equals"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/equals"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>